--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
- <link rel="stylesheet" href="styles.css">
+ <link rel="stylesheet" href="style.css">
 </head>
 
 <script type="text/javascript" src="//use.typekit.net/ysa1ltb.js"></script>
